config: update ensemble config

--- a/data/config/pretrain_freeze_bow_nn_ens.config
+++ b/data/config/pretrain_freeze_bow_nn_ens.config
@@ -10,12 +10,14 @@ output_path=../data/output.txt
 model_path_1=../data/models/pretrain_freeze_bow_nn.1.pt
 model_path_2=../data/models/pretrain_freeze_bow_nn.2.pt
 model_path_3=../data/models/pretrain_freeze_bow_nn.3.pt
+model_path_4=../data/models/pretrain_freeze_bow_nn.4.pt
+model_path_5=../data/models/pretrain_freeze_bow_nn.5.pt
 
 [WORD_EMBED]
 pretrain_embedding_path=../data/glove.small.txt
 
 [MODEL]
-ensemble_size=3
+ensemble_size=5
 bow=True
 bilstm=False
 freeze=True
